@@ -52,7 +52,7 @@
 
 <fieldset class="fieldset">
   <legend>Comment</legend>
-  <%=web_friendly_text @deployment.comment %>
+  <%=web_friendly_text @deployment.description %>
 </fieldset>
 <br /> <br />
 
